# function-like-macro-expansion-problem

./: .gitignore  Cargo.toml  docker-compose.yml
executable/: Cargo.toml
executable/src/: helper_traits.rs  main.rs
proc_macro_function_like/: Cargo.toml
proc_macro_function_like/src/: lib.rs  ver2.rs
