[package]
name = "function-like-macro-expansion-problem"
version = "0.1.0"
authors = ["Shagon <goshan58rus@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

tokio = { version = "^1.0", features = ["macros"]}

sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "postgres", "json", "macros"] }

# concatcp
const_format = "0.2.8"

[dependencies.proc_macro_function_like]
path = "../proc_macro_function_like"